# warrior-apl-formatter

./: Cargo.toml  Dioxus.toml  README.md  index.html
assets/: apl-formatter-27fc509ed01a1140.js  apl-formatter-27fc509ed01a1140.js.br  apl-formatter_bg-0853dc6719d0df3a.wasm  apl-formatter_bg-0853dc6719d0df3a.wasm.br  apl-formatter_bg-347167dfda698d2e.wasm  apl-formatter_bg-347167dfda698d2e.wasm.br  main-5008c76920b697af.css  main-5008c76920b697af.css.br  main.css
docs/: index.html
docs/assets/: apl-formatter-766ad101f5838e9c.js  apl-formatter-766ad101f5838e9c.js.br  apl-formatter_bg-1e54e0eecae70560.wasm  apl-formatter_bg-1e54e0eecae70560.wasm.br
src/: main.rs
