[package]
name = "apl-formatter"
version = "0.1.0"
authors = ["ConeDjordjic <turbo.topcone@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
lazy_static = "1.5.0"
once_cell = "1.21.3"
regex = "1.11.1"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[[bin]]
name = "apl-formatter"
path = "src/main.rs"
